# mailing_list_management

./: .env.example  README.md  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
blog/templatetags/: catalog_tags.py
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing_list/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_list/management/commands/: srart_mailing_list.py
mailing_list/migrations/: 0001_initial.py  0002_delete_user_remove_mailinglistsettings_time_and_more.py  0002_mailinglistsettings_owner.py  0003_alter_mailinglistsettings_end_time.py  0003_alter_mailinglistsettings_options.py  0004_message_status.py  0005_log_user_alter_log_mailing_list_and_more.py  0006_alter_log_time.py  0007_alter_log_time.py  0008_remove_log_response.py
mailing_list/templates/mailing_list/: base.html  log_list.html  mailinglistsettings_detail.html  mailinglistsettings_form.html  mailinglistsettings_list.html
user/: admin.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_options.py
user/templates/user/: user_confirm_delete.html  user_detail.html  user_form.html  (+1 more)
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+6 files in other folders)
